--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/node": "18.11.4",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
