--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "stripe": "^10.15.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
