--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/next": "^0.1.7",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.42.0",
     "axios": "^1.1.3",
     "faunadb": "^4.7.1",
@@ -21,12 +27,14 @@
     "stripe": "^10.15.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.3",
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/node": "18.11.4",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "slice-machine-ui": "^0.5.1",
     "typescript": "4.8.4"
   }
 }
