--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faunadb": "^4.7.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
@@ -30,6 +31,7 @@
     "@prismicio/types": "^0.2.3",
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/node": "18.11.4",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
