--- a/package.json
+++ b/package.json
@@ -6,37 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "slicemachine": "start-slicemachine"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prismicio/client": "^6.7.1",
-    "@prismicio/helpers": "^2.3.5",
-    "@prismicio/next": "^0.1.7",
-    "@prismicio/react": "^2.5.0",
-    "@prismicio/slice-simulator-react": "^0.2.2",
-    "@stripe/stripe-js": "^1.42.0",
-    "axios": "^1.1.3",
-    "faunadb": "^4.7.1",
-    "next": "12.3.1",
-    "next-auth": "^4.15.0",
-    "prismic-dom": "^2.2.7",
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
-    "sass": "^1.55.0",
-    "stripe": "^10.15.0"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@prismicio/types": "^0.2.3",
-    "@rocketseat/eslint-config": "^1.1.3",
-    "@types/node": "18.11.4",
-    "@types/prismic-dom": "^2.1.1",
-    "@types/react": "18.0.22",
-    "@types/react-dom": "18.0.7",
-    "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
-    "slice-machine-ui": "^0.5.1",
-    "typescript": "4.8.4"
+    "@rocketseat/eslint-config": "1.2.0"
   }
 }
