:zap: feat: register the user, listens to webhooks

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ STRIPE_API_SECRET_KEY=""
 
 STRIPE_API_PUBLIC_KEY=""
 
+STRIPE_SUCCESS_URL="http://localhost:3000/posts"
+STRIPE_CANCEL_URL="http://localhost:3000/"
+
 # GITHUB
 
 GITHUB_ID=""
