:fire: feat:create page posts, integration prismic

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
+NEXTAUTH_SECRET=""
+
 # STRIPE
 
 STRIPE_API_SECRET_KEY=""
 
-STRIPE_API_PUBLIC_KEY=""
+NEXT_PUBLIC_STRIPE_API_PUBLIC_KEY=""
+
+STRIPE_WEBHOOK_SECRET=""
 
 STRIPE_SUCCESS_URL="http://localhost:3000/posts"
 STRIPE_CANCEL_URL="http://localhost:3000/"
@@ -16,3 +20,9 @@ GITHUB_SECRET=""
 # FAUNA DB
 
 FAUNA_KEY=""
+
+# PRISMIC
+
+PRISMIC_ACCESS_TOKEN=""
+
+NEXT_PUBLIC_PRISMIC_API_ENDPOINT=""
