:zap: feat: create page preview

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "@rocketseat/eslint-config/react"
   ],
   "rules": {
-    "no-case-declarations": "off"
+    "no-case-declarations": "off",
+    "react-hooks/exhaustive-deps": "off"
   }
 }
