--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "slices/AdditionalContent/index.ts",
+    "./.slicemachine/prismicio.d.ts"
   ],
   "exclude": [
     "node_modules"
