--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,11 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "@rocketseat/eslint-config/react"
+    "@rocketseat/eslint-config/react",
+    "plugin:tailwindcss/recommended"
   ],
-  "rules": {
-    "no-case-declarations": "off",
-    "react-hooks/exhaustive-deps": "off"
-  }
+  "rules": {},
+  "plugins": [
+    "tailwindcss"
+  ]
 }
