--- a/package.json
+++ b/package.json
@@ -7,35 +7,30 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "slicemachine": "start-slicemachine"
+    "lint:fix": "eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
-    "@prismicio/client": "6.7.3",
-    "@prismicio/helpers": "2.3.9",
-    "@prismicio/next": "1.0.3",
-    "@prismicio/react": "2.5.2",
-    "@prismicio/slice-simulator-react": "0.2.3",
-    "@stripe/stripe-js": "1.49.0",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "axios": "1.3.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "faunadb": "4.8.0",
-    "next": "13.2.4",
-    "next-auth": "4.20.1",
+    "@next-auth/prisma-adapter": "1.0.6",
+    "@phosphor-icons/react": "2.0.9",
+    "@prisma/client": "4.14.0",
+    "@types/node": "20.1.4",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.2",
+    "next": "13.4.2",
+    "next-auth": "4.22.1",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.8.0",
-    "sass": "1.59.3",
-    "stripe": "11.14.0",
-    "typescript": "4.9.5"
+    "stripe": "12.5.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@prismicio/types": "0.2.7",
     "@rocketseat/eslint-config": "1.2.0",
-    "@types/next-auth": "3.15.0",
-    "slice-machine-ui": "0.7.1"
+    "eslint-plugin-tailwindcss": "3.11.0",
+    "prisma": "4.14.0"
   }
 }
