:zap: feat: changes in the app registration flow

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
     "@rocketseat/eslint-config/react",
     "plugin:tailwindcss/recommended"
   ],
-  "rules": {},
+  "rules": {
+    "no-case-declarations": "off"
+  },
   "plugins": [
     "tailwindcss"
   ]
