--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "eslint src --ext .tsx,.ts --fix"
+    "lint": "next lint"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "1.0.6",
     "@phosphor-icons/react": "2.0.9",
     "@prisma/client": "4.14.0",
+    "@stripe/stripe-js": "1.52.1",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
@@ -24,6 +25,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "9.1.2",
+    "react-wrap-balancer": "0.5.0",
     "stripe": "12.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
