--- a/package.json
+++ b/package.json
@@ -18,21 +18,31 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "1.4.0",
+    "contentlayer": "0.3.2",
+    "date-fns": "2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "next-auth": "4.22.1",
+    "next-contentlayer": "0.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "5.3.4",
     "react-toastify": "9.1.2",
     "react-wrap-balancer": "0.5.0",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-pretty-code": "0.9.5",
+    "rehype-slug": "5.1.0",
+    "remark-gfm": "3.0.1",
+    "shiki": "0.14.2",
     "stripe": "12.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
+    "@tailwindcss/typography": "0.5.9",
     "eslint-plugin-tailwindcss": "3.11.0",
     "prisma": "4.14.0"
   }
